include(parportTaskLib)
ADD_LIBRARY(${PARPORT_TASKLIB_NAME} SHARED 
    ${PARPORT_TASKLIB_SOURCES})

add_dependencies(${PARPORT_TASKLIB_NAME}
    regen-toolkit)


TARGET_LINK_LIBRARIES(${PARPORT_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${PARPORT_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${PARPORT_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${PARPORT_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${PARPORT_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${PARPORT_TASKLIB_HEADERS}
    DESTINATION include/orocos/parport)

